# docker-py

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  Dockerfile  Dockerfile-docs  Dockerfile-py3  MANIFEST.in  Makefile  README.md  docs-requirements.txt  py.bat  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt  setup.bat  setup.py  setup.sh  test-requirements.txt  tox.ini
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
.run/: Dockerfile.run.xml  Sphinx.run.xml  docker - dev.run.xml  docker - tests.run.xml  docker.run.xml  make all.run.xml  pytest.run.xml
docker/: README.md  __init__.py  auth.py  client.py  constants.py  errors.py  tls.py  version.py
docker/api/: build.py  client.py  config.py  container.py  daemon.py  exec_api.py  image.py  network.py  plugin.py  secret.py  service.py  swarm.py  volume.py
docker/compat/: __init__.py
docker/context/: __init__.py  api.py  config.py  context.py
docker/credentials/: __init__.py  store.py  utils.py
docker/models/: __init__.py  configs.py  containers.py  images.py  networks.py  nodes.py  plugins.py  resource.py  secrets.py  services.py  swarm.py  volumes.py
docker/transport/: __init__.py  basehttpadapter.py  npipeconn.py  npipesocket.py  sshconn.py  ssladapter.py  unixconn.py
docker/types/: __init__.py  base.py  containers.py  daemon.py  healthcheck.py  networks.py  services.py
docker/utils/: __init__.py  build.py  config.py  decorators.py  fnmatch.py  json_stream.py  ports.py  socket.py  utils.py
docs/: change-log.md  conf.py
docs/user_guides/: index.rst  multiplex.rst
scripts/: release.sh
tests/: Dockerfile  conftest.py  helpers.py
tests/integration/: api_build_test.py  api_config_test.py  api_container_test.py  api_exec_test.py  api_healthcheck_test.py  api_image_test.py  api_network_test.py  api_plugin_test.py  api_secret_test.py  api_service_test.py  api_swarm_test.py  api_volume_test.py  base.py  client_test.py  conftest.py  context_api_test.py  errors_test.py  models_containers_test.py  models_images_test.py  models_networks_test.py  models_resources_test.py  models_services_test.py  models_swarm_test.py  models_volumes_test.py  regression_test.py
tests/integration/credentials/: create_gpg_key.sh  store_test.py
tests/ssh/: api_build_test.py  base.py  connect_test.py
tests/ssh-keys/: id_rsa.pub
tests/unit/: api_build_test.py  api_container_test.py  api_exec_test.py  api_image_test.py  api_network_test.py  api_test.py  api_volume_test.py  auth_test.py  client_test.py  context_test.py  dockertypes_test.py  errors_test.py  fake_api.py  fake_api_client.py  models_containers_test.py  models_networks_test.py  models_services_test.py  sshadapter_test.py  ssladapter_test.py  swarm_test.py  utils_build_test.py  utils_config_test.py  utils_json_stream_test.py  utils_proxy_test.py  utils_test.py
