[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docker"
description = "A Python library for the Docker Engine API."
readme.file = "README.md"
readme.content-type = "text/markdown"
license.file = "LICENSE"
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, !=3.6.*"
dynamic = ["version"]

url = 'https://github.com/docker/docker-py'
# project_urls=[]
#     'Documentation': 'https://docker-py.readthedocs.io',
#     'Changelog': 'https://docker-py.readthedocs.io/en/stable/change-log.html',  # noqa: E501
#     'Source': 'https://github.com/docker/docker-py',
#     'Tracker': 'https://github.com/docker/docker-py/issues',
# }
zip_safe = false
test_suite = 'tests'
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Other Environment',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 2',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development',
    'Topic :: Utilities',
    'License :: OSI Approved :: Apache Software License',
]
maintainer = 'Ulysses Souza'
maintainer_email = 'ulysses.souza@docker.com'
dependencies = [
    "appdirs>=1.4.3",
    "asn1crypto>=0.22.0",
    "backports.ssl-match-hostname>=3.5.0.1",
    "cffi>=1.14.4",
    "cryptography>=3.2",
    "enum34>=1.1.6",
    "idna>=2.5",
    "ipaddress>=1.0.18",
    "packaging>=16.8",
    "paramiko>=2.4.2",
    "pycparser>=2.17",
    "pyOpenSSL>=18.0.0",
    "pyparsing>=2.2.0",
    "pywin32>=227; sys_platform == 'win32'",
    "pywin32>=227; sys_platform == 'win32'",
    "requests >= 2.14.2, != 2.18.0",
    "six>=1.16.0",
    "urllib3>=1.24.3",
    "websocket-client >= 0.32.0",
]
optional-dependencies.docs = ["recommonmark>=0.4.0", "Sphinx>=1.4.6"]
optional-dependencies.test = [
    # This is the last version with python 2.7 support
    "setuptools>=44.0.0",

    "coverage>=4.5.2",
    "flake8>=3.6.0",
    "mock>=1.0.1",
    "pytest>=4.3.1",
    "pytest-xdist",
    "pytest-cov>=2.6.1",
    "pytest-timeout>=1.3.3",
]

[tool.hatch.version]
path = "docker/version.py"

[tool.hatch.build]
ignore-vcs = true
exclude = [
    ".coverage",
    "*.pyc",
    ".tmp",
    ".pytest_cache",
    ".mypy_cache",
    ".tmp",
    ".tox",
]

[tool.hatch.build.targets.wheel]
only-include = ["docker"]

################################################
[tool.poetry]
################################################

name = "docker"
version = "0.4.4"
description = ""
authors = ["Sébastien Eustace <sebastien@eustace.io>"]

[tool.poetry.dependencies]
python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, !=3.6.*"
appdirs = "^1.4.3"
asn1crypto = ">=0.22.0"
backports-ssl-match-hostname = ">=3.5.0.1"
cffi = "^1.14.4"
cryptography = "^3.2"
enum34 = ">=1.1.6"
idna = "^2.5"
ipaddress = "^1.0.18"
packaging = "^16.8"
paramiko = "^2.4.2"
pycparser = "^2.17"
pyOpenSSL = "^18.0.0"
pyparsing = "^2.2.0"
requests = ">=2.20.0"
six = "^1.16.0"
urllib3 = "^1.24.3"
websocket-client = "^0.56.0"
pywin32 = { version = ">=305", platform = "win32" }

################################################
[tool.isort]
################################################

py_version = "all"
multi_line_output = 4
lines_after_imports = -1
line_length = 130
force_single_line = false
length_sort = false
from_first = false
force_alphabetical_sort_within_sections = true
sections = [
    # __future__ imports
    "FUTURE",
    # standard library
    "STDLIB",
    # first party items
    "FIRSTPARTY",
    # local folder
    "LOCALFOLDER",
    # third party packages
    "THIRDPARTY",
]

known_first_party = ["docker"]
known_third_party = ["six", "requests", "pytest", "websocket", "paramiko"]

[tool.pylint.main]
ignore = [".git", ".pytest_cache"]
ignore-patterns = ["^\\.#"]
py-version = "2.7"

[tool.pylint.format]
max-line-length = 130

[tool.pylint."messages control"]
disable = [
    "invalid-name",
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "consider-using-f-string",
    "super-with-arguments",
    "wrong-import-order",
]
